<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="refresh">Обновить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_are_search">Вы искали</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_with_support">Написать в поддержку</string>
    <string name="license">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="email_support_address">zigatun@icloud.com</string>
    <string name="email_support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="any_not_found">Ничего не нашлось</string>
    <string name="connection_troubles">Проблемы со связью</string>
    <string name="trouble_no_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="user_playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_required">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="permission_description">Доступ необходим для выбора обложки альбома</string>
    <string name="no_permission">Нет доступа</string>
    <string name="no_permission_description">Не удалось получить доступ к галерее. Доступ необходим для выбора изображения в качестве обложки плейлиста. Убедитесь, что нужное разрешение активировано в настройках устройства и повторите попытку. Желаете открыть настройки прав доступа сейчас?</string>
</resources>