<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:layout_margin="16dp"
            android:backgroundTint="@color/yp_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/yp_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/black_theme"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/yp_black"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/share_app"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/yp_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/share_icon"
                android:layout_marginVertical="16dp"
                android:backgroundTint="@color/yp_text_gray"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/contact_with_support"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/yp_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/support_icon"
                android:layout_marginVertical="16dp"
                android:backgroundTint="@color/yp_text_gray"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/license"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/yp_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/forward_icon"
                android:layout_marginVertical="16dp"
                android:backgroundTint="@color/yp_text_gray"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>