<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">
    <Toolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:titleTextAppearance="@style/ToolbarTitleTextStyle"
        android:navigationIcon="@drawable/back_icon" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.0548" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9452" />
            <ImageView
                android:id="@+id/album_image"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                android:layout_marginVertical="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/track_name"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:src="@drawable/placeholder_image" />

            <TextView
                android:id="@+id/track_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/album_image"
                app:layout_constraintBottom_toTopOf="@id/track_author"
                app:layout_constraintLeft_toRightOf="@id/left_guideline"
                style="@style/MusicNameTextStyle.Player"
                tools:text="В аквапарке" />
            <TextView
                android:id="@+id/track_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_name"
                app:layout_constraintLeft_toRightOf="@id/left_guideline"
                style="@style/MusicArtistTextStyle.Player"
                tools:text="Kunteynir" />
            <ImageView
                android:id="@+id/add_to_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_author"
                app:layout_constraintLeft_toRightOf="@id/left_guideline"
                android:src="@drawable/share_icon"/>
            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_author"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/share_icon"/>
            <ImageView
                android:id="@+id/add_to_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_author"
                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                android:src="@drawable/share_icon"/>

            <!-- Длительность -->
            <TextView
                android:id="@+id/duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                app:layout_constraintTop_toBottomOf="@id/play"
                app:layout_constraintLeft_toRightOf="@id/left_guideline" />
            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/play"
                app:layout_constraintRight_toRightOf="@id/right_guideline" />

            <!-- Альбом -->
            <TextView
                android:id="@+id/album_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album"
                app:layout_constraintTop_toBottomOf="@id/duration_label"
                app:layout_constraintLeft_toRightOf="@id/left_guideline" />
            <TextView
                android:id="@+id/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/duration"
                app:layout_constraintRight_toRightOf="@id/right_guideline" />

            <!-- Год -->
            <TextView
                android:id="@+id/year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                app:layout_constraintTop_toBottomOf="@id/album_label"
                app:layout_constraintLeft_toRightOf="@id/left_guideline" />
            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/album"
                app:layout_constraintRight_toRightOf="@id/right_guideline" />

            <!-- Жанр -->
            <TextView
                android:id="@+id/genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                app:layout_constraintTop_toBottomOf="@id/year_label"
                app:layout_constraintLeft_toRightOf="@id/left_guideline" />
            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/year"
                app:layout_constraintRight_toRightOf="@id/right_guideline" />

            <!-- Страна -->
            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                app:layout_constraintTop_toBottomOf="@id/genre_label"
                app:layout_constraintLeft_toRightOf="@id/left_guideline" />
            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/genre"
                app:layout_constraintRight_toRightOf="@id/right_guideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>