<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnBackground"
        tools:context=".player.ui.PlayerFragment">

        <Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:navigationIcon="@drawable/back_icon"
            android:titleTextAppearance="@style/ToolbarTitleTextStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/left_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.0548" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/right_guideline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9452" />

                <ImageView
                    android:id="@+id/album_image"
                    android:layout_width="312dp"
                    android:layout_height="312dp"
                    android:layout_marginVertical="24dp"
                    android:src="@drawable/placeholder_image"

                    app:layout_constraintBottom_toTopOf="@id/track_name"
                    app:layout_constraintEnd_toStartOf="@id/right_guideline"
                    app:layout_constraintStart_toStartOf="@id/left_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/track_name"
                    style="@style/MusicNameTextStyle.Player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    app:layout_constraintBottom_toTopOf="@id/track_author"
                    app:layout_constraintStart_toStartOf="@id/left_guideline"

                    app:layout_constraintTop_toBottomOf="@id/album_image"
                    tools:text="В аквапарке" />

                <TextView
                    android:id="@+id/track_author"
                    style="@style/MusicArtistTextStyle.Player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/track_author"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    tools:text="Kunteynir" />

                <ImageButton
                    android:id="@+id/add_to_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_button"
                    android:src="@drawable/add_to_playlist_icon"
                    app:layout_constraintBottom_toTopOf="@id/track_play_position"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@id/track_author" />

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:padding="15dp"
                    android:src="@drawable/play_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/track_author" />

                <ImageButton
                    android:id="@+id/add_to_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_button"
                    android:src="@drawable/add_to_favorites_icon"
                    app:layout_constraintBottom_toTopOf="@id/track_play_position"
                    app:layout_constraintRight_toLeftOf="@id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@id/track_author" />

                <TextView

                    android:id="@+id/track_play_position"
                    style="@style/TrackCursorTextStyle"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    app:layout_constraintRight_toLeftOf="@id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@id/playButton"
                    tools:text="00:00" />
                <!-- Длительность -->
                <TextView
                    android:id="@+id/duration_label"
                    style="@style/TrackInfoParamStyle"
                    android:text="@string/duration"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@id/track_play_position" />

                <TextView
                    android:id="@+id/duration"
                    style="@style/TrackInfoValueStyle"
                    app:layout_constraintRight_toRightOf="@id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@id/track_play_position" />

                <!-- Альбом -->
                <TextView
                    android:id="@+id/album_label"
                    style="@style/TrackInfoParamStyle"
                    android:text="@string/album"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@id/duration_label" />

                <TextView
                    android:id="@+id/album"
                    style="@style/TrackInfoValueStyle"
                    app:layout_constraintRight_toRightOf="@id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@id/duration" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/album_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:constraint_referenced_ids="album_label,album" />

                <!-- Год -->
                <TextView
                    android:id="@+id/year_label"
                    style="@style/TrackInfoParamStyle"
                    android:text="@string/year"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@id/album_label" />

                <TextView
                    android:id="@+id/year"
                    style="@style/TrackInfoValueStyle"
                    app:layout_constraintRight_toRightOf="@id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@id/album" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/year_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:constraint_referenced_ids="year_label,year" />

                <!-- Жанр -->
                <TextView
                    android:id="@+id/genre_label"
                    style="@style/TrackInfoParamStyle"
                    android:text="@string/genre"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@id/year_label" />

                <TextView
                    android:id="@+id/genre"
                    style="@style/TrackInfoValueStyle"
                    app:layout_constraintRight_toRightOf="@id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@id/year" />

                <!-- Страна -->
                <TextView
                    android:id="@+id/country_label"
                    style="@style/TrackInfoParamStyle"
                    android:text="@string/country"
                    app:layout_constraintLeft_toRightOf="@id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@id/genre_label" />

                <TextView
                    android:id="@+id/country"
                    style="@style/TrackInfoValueStyle"
                    app:layout_constraintRight_toRightOf="@id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@id/genre" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/playlist_add_sheet"
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:background="@drawable/bottom_sheet_bg"
        app:backgroundTint="?attr/colorOnBackground"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <View
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded" />

            <TextView
                style="@style/HistoryTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:paddingTop="18dp"
                android:paddingBottom="12dp"
                android:text="@string/add_to_playlist" />

            <Button
                android:id="@+id/addNewPlaylist"
                style="@style/RegularAppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:text="@string/new_playlist" />
            <androidx.recyclerview.widget.RecyclerView android:visibility="gone"
                android:id="@+id/playlistsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginTop="24dp">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:indeterminateTint="@color/yp_blue"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"/>
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
